css in the LanguageList component fixed to look good on iPhones in potrait

--- a/src/components/ProgrammingLanguage/ProgrammingLanguage.css
+++ b/src/components/ProgrammingLanguage/ProgrammingLanguage.css
@@ -21,6 +21,7 @@
 }
   
 .text-container h2 {
+    text-align: left;
     font-size: 20px;
     font-weight: 600;
     margin: 0;
@@ -63,4 +64,48 @@
     font-size: 20px;
     font-weight: 300;
     color: #333333;
+}
+
+
+
+/* CSS rules for iPhones in portrait orientation */
+@media only screen and (min-width: 321px) and (max-width: 414px) and (orientation: portrait) {
+    .sectionTitle {
+        font-size: 24px;
+    }
+
+    .text-container {
+        width: 200px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .text-container h2 {
+        font-size: 18px;
+        font-weight: 600;
+        margin: 0;
+        margin-bottom: 10px;
+        color: black;
+    }
+}
+
+ /* iPhone SE */
+@media only screen and (max-width: 320px) and (orientation: portrait) {
+    .sectionTitle {
+        font-size: 24px;
+    }
+
+    .text-container {
+        width: 200px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .text-container h2 {
+        font-size: 18px;
+        font-weight: 600;
+        margin: 0;
+        margin-bottom: 10px;
+        color: black;
+    }
 }
